Добавлен каталог lifecycle , улучшен MVP
